# openslide

./: .pre-commit-config.yaml  Makefile.am  README.txt  configure.ac  meson.build
.github/: dependabot.yml
.github/workflows/: c.yaml  update-check.yml  vcpkg-cache.yml
common/: meson.build
misc/: make-vmu.py
scripts/: vcpkg-install.sh
src/: make-tables.c  meson.build  openslide-dll.rc.in  openslide-hash.c  openslide-hash.h  openslide-private.h  openslide-vendor-hamamatsu.c  openslide.c  openslide.h
subprojects/: uthash.wrap
test/: driver.in  driver.py  extended.c  meson.build
test/cases/hamamatsu-vms-vms-blank-mapfile/: config.yaml
test/env/: meson.build  mkenv.py
test/lib/: meson.build
tools/: slidetool-util.c
